<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <plurals name="possible_exposure_subheading">
    <item quantity="zero">COVIDWISE estimates that you were last exposed today.</item>
    <item quantity="one">COVIDWISE estimates that you were last exposed %1$d day ago.</item>
    <item quantity="other">COVIDWISE estimates that you were last exposed %1$d days ago.</item>
  </plurals>
  <string name="app_name">COVIDWISE</string>
  <string name="btn_start">Get Started</string>
  <string name="btn_turn_on">Continue</string>
  <string name="btn_done">Done</string>
  <string name="btn_not_now">Don\'t Enable</string>
  <string name="generic_error_message">Internal error, please try again.</string>
  <string name="onboarding_welcome_text">Welcome to COVIDWISE</string>
  <string name="onboarding_start_text">"Thanks for downloading COVIDWISE, the Virginia Department of Health's (VDH) COVID-19 exposure notification app. Using this app is 100% voluntary. No GPS, location information, or personal identifiers will ever be collected or stored.
\n\nYour device will share anonymous tokens via Bluetooth with other COVIDWISE users. If another user you've been nearby tests positive for COVID-19 within a 14-day period, your app will notify you.
\n\nIf you test positive, you can easily and anonymously notify others to help stop the spread of COVID-19."</string>
  <string name="onboarding_privacy_policy_link">For more information, read our Privacy Policy: <a href="https://www.vdh.virginia.gov/covidwise/privacy-policy">Virginia Department of Health - Privacy Policy</a></string>
  <string name="onboarding_opt_in_title">Enable Exposure Notifications</string>
  <string name="onboarding_opt_in_text">"Enabling exposure notification is your choice. It must be enabled for the app to receive exposure notifications or to notify others that you have tested positive for COVID-19. You can disable this feature at any time.
    \n\nYour privacy is protected. COVIDWISE only shares anonymous tokens with other app users. These tokens only collect data, such as the date, time, and signal strength and duration of proximity, and are not linked to your identity or location. Your personal information is never collected or shared with other COVIDWISE users.
    \n\nIn the event another user you have been nearby tests positive for COVID-19, you can be notified that you are at risk of exposure.
    \n\nIf you test positive for COVID-19, you control if you want to submit a positive test result to COVIDWISE, which will then notify other users if they were at risk. Doctors and laboratories are required to report positive COVID-19 test results to VDH. VDH staff will contact you if you test positive to provide guidance to help keep yourself and others safe.
    \n\nTo learn more about COVID-19 in Virginia and associated symptoms, please visit: <a href="https://www.vdh.virginia.gov/coronavirus/">https://www.vdh.virginia.gov/coronavirus</a>   "
    \n\nYou can manage Exposure Notifications in Settings > Google > COVID-19 Exposure Notifications</string>
  <string name="onboarding_finish_title">It\'s Important To Your Community To Share A Positive Result</string>
  <string name="onboarding_finish_message">"If you test positive for COVID-19, you can choose to share your result.
\n\nThis is how other COVIDWISE users in Virginia know they were exposed to someone who tested positive.
\n\nSharing this information helps stop the spread of the virus."</string>
  <string name="notify_turn_on_exposure_notifications_header">You can\'t share your positive test results until exposure notifications are turned on.</string>
  <string name="turn_on_exposure_notifications_action">Turn on Exposure Notifications</string>
  <string name="exposure_notifications_are_turned_off">Exposure Notifications are turned off</string>
  <string name="exposure_notifications">Exposure Notifications</string>
  <string name="past_exposures">Past Exposures</string>
  <string name="possible_exposure">Possible Exposure</string>
  <string name="no_exposures">No Exposures Detected</string>
  <string name="exposures_found">Exposures Detected</string>
  <string name="on">On</string>
  <string name="off">Off</string>
  <string name="home_tab">Home</string>
  <string name="main_toolbar_text">COVIDWISE</string>
  <string name="tested_positive_text">Tested positive\nfor COVID-19?</string>
  <string name="home_tab_exposures_text">Exposures</string>
  <string name="home_tab_exposures_blank_text">Home</string>
  <string name="home_tab_notify_text">Notify Others</string>
  <string name="home_tab_notify_debug_text">Debug</string>
  <string name="home_tab_notify_virtual_agent_text">Virtual VDH</string>
  <string name="home_tab_virtual_agent">Virtual VDH</string>
  <string name="virtual_agent_title_text">Virtual VDH</string>
  <string name="btn_next">Next</string>
  <string name="btn_cancel">Cancel</string>
  <string name="navigate_up">Navigate up</string>
  <string name="exposure_about_title">About Exposure Notifications</string>
  <string name="exposure_about_description">Enabling exposure notifications is your choice. It can be disabled by you at any time. It must be enabled for the app to receive exposure notifications or to notify others that you tested positive for COVID-19.
    \n\nYour privacy is protected. COVIDWISE only shares anonymous tokens with other app users. These tokens are not linked to your identity or location. Your personal information is not collected or shared with other COVIDWISE users. Information from the anonymous tokens, such as the date, time, and signal strength and duration of proximity are collected. These details are not shared with other app users and are not tied to your personal identity.
    \n\nIn the event another user you have been nearby tests positive for COVID-19, you can be notified that you are at risk of exposure. You control if you want to submit a positive test result to COVIDWISE, which will then notify other users if they were at risk.
    \n\nDoctors and laboratories are required to report positive COVID-19 test results to VDH. VDH staff will contact you if you test positive to provide guidance to help keep yourself and others safe.
    \n\nTo learn more about COVID-19 in Virginia and associated symptoms, please visit</string>
  <string name="exposure_about_description_ext"><a href="https://www.vdh.virginia.gov/coronavirus/">https://www.vdh.virginia.gov/coronavirus</a></string>
  <string name="exposure_about_settings_button_pre_text">You can manage Exposure Notifications in Settings > Google > COVID-19 Exposure Notifications.</string>
  <string name="exposure_about_settings_button_text">Settings</string>
  <string name="exposure_about_detail">
    These notifications are designed to notify you if you\'ve been exposed to a user who later reports themselves as testing positive for COVID-19. You can choose to turn off these notifications at any time.
    \n\nExposure notifications rely on the sharing and collecting of random IDs. These IDs are a random string of numbers that won\'t identify you to other users and change many times a day to protect your privacy.
    \n\nYour device will collect and share random IDs with nearby devices. This app can notify you if you\'ve been near someone who has reported a positive COVID-19 test result.
    \n\nIf you test positive for COVID-19, you can help your community by reporting your test result.
    \n\nIf you\'re exposed, the time, approximate date, and distance of your exposure are shared with this app. This helps health experts better understand the spread of COVID-19.
  </string>
  <string name="exposure_learn_more_title">About verified test results</string>
  <string name="verify_test_result_title">Confirm Your Positive Result</string>
  <string name="wait_if_retry_exhausted_text">Please wait for %1$d minutes before retrying.</string>
  <string name="verify_test_result_subtitle">VDH contacts everyone who has received a positive test result for COVID-19 and their staff will provide a unique personal identification number (PIN) to that individual. This is used to prevent false reporting of positive tests within the app.
</string>
  <string name="verify_test_result_no_link_msg">The app does not link the PIN with your name.</string>
  <string name="verify_test_result_subtitle_after_pin"></string>
  <string name="enter_your_test_identifier">Test identifier</string>
  <string name="first_name_label">First Name</string>
  <string name="last_name_label">Last Name</string>
  <string name="year_of_birth_label">Year of birth</string>
  <string name="share_test_identifier_help">The unique test identifier that came with your COVID-19 test must be used to verify your positive test result.</string>
  <string name="test_date_label">Date of test</string>
  <string name="share_test_date_help">The test date helps the app know when you may have been contagious and notify the right people of possible exposure.</string>
  <string name="share_error">Unable to share</string>
  <string name="share_complete_title">You\'re all done!</string>
  <string name="share_complete_thankyou">Thank You For Confidentially Sharing Your Result.</string>
  <string name="share_complete_detailed_text">Your last 14 days of anonymous tokens have been submitted. COVIDWISE users that you have been near may be notified within the next day.
  \n\nYour name is not tied to your report and you will not hear from other COVIDWISE users. However, your information may help identify new cases of COVID-19, as other app users receive exposure notifications and are tested.
  \n\nThank you for doing your part to keep Virginians healthy and safe!</string>
  <string name="share_complete_detail">Your last 14 days of anonymous tokens have been submitted. Your name is not tied to your report and you will not hear from any other COVIDWISE users. However, your information may help identify new cases of COVID-19, as other app users receive exposure notifications and are tested. This is an important step in working together to contain COVID-19 in our communities.</string>
  <string name="share_not_complete_title">Test result not shared</string>
  <string name="share_not_complete_description">Your test result wasn\'t shared. This test result is saved in the app. You can share or delete your test result at any time.</string>
  <string name="share_test_result">Submit Positive Result</string>
  <string name="share_test_result_title">Share A Positive Result</string>
  <string name="share_test_result_description">If you test positive for COVID-19, you can choose to share your result.
\n\nOther COVIDWISE users you were near over the past 14 days may be notified of exposure. Your name will not be shared with any app users. Future exposures will not be notified based on this submission.
\n\nPlease self-isolate if you have tested positive.</string>
  <string name="share_begin_title">Before You Get Started</string>
  <string name="share_begin_detail">The 100% Transparency Checklist</string>
  <string name="positive_test_results">Submitted Reports</string>
  <string name="no_positive_test_results">No positive test results</string>
  <string name="learn_more">Learn more at <a href="https://www.vdh.virginia.gov/coronavirus/">https://www.vdh.virginia.gov/coronavirus</a></string>
  <string name="please_enter_digits">Please enter your six-digit PIN:</string>
  <string name="how_it_works">How It Works</string>
</resources>