<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/toolbar_color">

    <ImageButton
      android:id="@android:id/home"
      style="?attr/borderlessButtonStyle"
      android:layout_width="?attr/actionBarSize"
      android:layout_height="match_parent"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:src="@drawable/ic_arrow" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:gravity="center"
      android:layout_marginLeft="-50dp"
      android:textSize="20sp"
      android:fontFamily="sans-serif-medium"
      android:textStyle="normal"
      android:textColor="@color/white"
      android:text="@string/verify_test_result_title" />

  </LinearLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dp10"
      app:cardCornerRadius="5dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_large">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp22"
          android:paddingBottom="@dimen/padding_normal"
          android:gravity="center|left"
          android:orientation="horizontal">

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:src="@drawable/ic_question" />

          <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:lineSpacingExtra="8sp"
            android:text="@string/how_it_works"
            android:textSize="20sp" />

        </LinearLayout>

        <TextView
          android:textStyle="normal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/roboto_regular"
          android:letterSpacing="0.03125"
          android:lineSpacingExtra="7sp"
          android:text="@string/verify_test_result_subtitle"
          android:textColor="@color/covid_color"
          android:textSize="16sp" />
        <TextView
          android:id="@+id/verify_test_nolink_msg"
          android:textStyle="normal|bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp40"
          android:fontFamily="@font/roboto_regular"
          android:letterSpacing="0.03125"
          android:lineSpacingExtra="7sp"
          android:text="@string/verify_test_result_no_link_msg"
          android:textColor="@color/covid_color"
          android:textSize="16sp" />
        <TextView
          android:textStyle="normal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp40"
          android:fontFamily="@font/roboto_regular"
          android:lineSpacingExtra="7sp"
          android:text="@string/please_enter_digits"
          android:textColor="@color/otpview_color"
          android:textSize="16sp" />
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp21"
          android:gravity="center">

        <gov.vdh.exposurenotification.otpview.OtpView
          android:id="@+id/otp_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:textColor="#de000000"
          app:itemCount="6"
          app:itemWidth="@dimen/dp40"
          android:textSize="34sp"
          app:itemSpacing="6dp"
          app:lineColor="@drawable/otp_item_state"
          app:state_filled="true"
          app:viewType="line" />

        </LinearLayout>

        <TextView
          android:id="@+id/wait_if_retry_exhausted"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/padding_normal"
          android:layout_marginBottom="@dimen/padding_extra_large"
          android:gravity="center"
          android:text="@string/wait_if_retry_exhausted_text"
          android:textAppearance="?attr/textAppearanceSubtitle1"
          android:visibility="gone" />


        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:fontFamily="sans-serif"
          android:textStyle="normal"
          android:textColor="@color/text_color_new"
          android:lineSpacingExtra="7sp"
          android:text="@string/verify_test_result_subtitle_after_pin"
          android:layout_marginTop="@dimen/dp40"  />

      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </androidx.core.widget.NestedScrollView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/color_dark_blue"
    android:gravity="right">

    <Button
      android:id="@+id/share_next_button"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:textColor="@color/white"
      app:strokeColor="@color/white"
      app:strokeWidth="0.5dp"
      android:text="@string/btn_next"
      android:layout_marginRight="@dimen/dp16"
      android:backgroundTint="@color/otpview_color"/>

  </LinearLayout>

</LinearLayout>
