<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:text="@string/home_tab_notify_text"
    android:gravity="center|left"
    android:textSize="@dimen/sp20"
    android:fontFamily="sans-serif-medium"
    android:background="@color/toolbar_color"
    android:textColor="@color/white"
    android:paddingLeft="@dimen/padding_large"
    android:textAppearance="?attr/textAppearanceHeadline6"/>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
          android:id="@+id/settings_banner_section"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/padding_large"
          android:paddingStart="@dimen/padding_large"
          android:paddingEnd="@dimen/padding_large"
          android:orientation="vertical">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_extra_large"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/exposure_notifications_are_turned_off" />

          <TextView
            android:id="@+id/settings_banner_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:lineSpacingExtra="7sp"
            android:textColor="@color/covid_color"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/notify_turn_on_exposure_notifications_header" />

          <Button
            android:id="@+id/start_api_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_exposure_notifications_action"
            android:layout_gravity="center_horizontal"
            style="?attr/materialButtonOutlinedStyle" />

      </LinearLayout>

        <LinearLayout
          android:id="@+id/notify_share_section"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/padding_large"
          android:orientation="vertical">

          <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            app:cardCornerRadius="5dp">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/padding_large"
              android:orientation="vertical">

              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_normal"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="10dp"
                  android:src="@drawable/ic_hand" />
                <!--
                            android:paddingBottom="@dimen/padding_normal" -->
                <TextView
                  android:id="@+id/fragment_notify_subtitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/share_test_result_title"
                  android:textStyle="bold"
                  android:textSize="20sp"
                  android:textAppearance="?attr/textAppearanceHeadline6" />

              </LinearLayout>

              <TextView
                android:id="@+id/fragment_notify_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_large"
                android:text="@string/share_test_result_description"
                android:textColor="@color/covid_color"
                android:textAppearance="?attr/textAppearanceBody1" />

              <TextView
                android:id="@+id/fragment_notify_learnmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_extra_large"
                android:layout_marginHorizontal="@dimen/padding_large"
                android:textColorLink="#0059E8"
                android:text="@string/learn_more"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/color_dark_blue" />

            </LinearLayout>
          </androidx.cardview.widget.CardView>

          <Button
            android:id="@+id/fragment_notify_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/padding_large"
            app:strokeColor="@color/white"
            app:strokeWidth="0.5dp"
            android:text="@string/share_test_result"
            android:backgroundTint="@color/otpview_color"/>

<!--          <TextView-->
<!--            android:id="@+id/privacy_click"-->
<!--            android:layout_width="match_parent"-->
<!--            android:gravity="center"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="12sp"-->
<!--            android:padding="5dp"-->
<!--            android:fontFamily="sans-serif"-->
<!--            android:textStyle="normal"-->
<!--            android:textColor="#89000000"-->
<!--            android:lineSpacingExtra="4sp"-->
<!--            android:text="@string/privacy_policy"/>-->

<!--
          <include layout="@layout/horizontal_divider" />
-->
        </LinearLayout>

        <LinearLayout
          android:id="@+id/diagnosis_history_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/padding_large"
          android:orientation="vertical">

        <TextView
          android:id="@+id/fragment_notify_diagnosis_heading"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingHorizontal="@dimen/padding_large"
          android:layout_marginBottom="@dimen/padding_normal"
          android:text="@string/positive_test_results"
          android:textAppearance="?attr/textAppearanceOverline" />

          <ViewSwitcher
            android:id="@+id/fragment_notify_diagnosis_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
              android:id="@+id/fragment_notify_no_diagnosis_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/padding_extra_large"
              android:paddingHorizontal="@dimen/padding_large"
              android:text="@string/no_positive_test_results"
              android:textAppearance="?attr/textAppearanceBody1"
              android:textColor="?attr/colorControlNormal"
              android:gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/notify_recycler_view"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          </ViewSwitcher>

        </LinearLayout>

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

  </LinearLayout>


