<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:orientation="vertical"
  android:layout_height="match_parent">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="7"
    app:layout_constraintBottom_toTopOf="@id/onboarding_buttons"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="@dimen/onboarding_logo_size"
        android:layout_height="@dimen/onboarding_logo_size"
        android:layout_marginTop="@dimen/onboarding_logo_marginTop"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@mipmap/ic_launcher" />

      <TextView
        android:id="@+id/onboarding_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/onboarding_opt_in_title"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image" />

      <TextView
        android:id="@+id/onboarding_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:clickable="true"
        android:linksClickable="true"
        android:textColorLink="#0059E8"
        android:text="@string/onboarding_opt_in_text"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_label" />
      <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/main_toolbar_text"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

  <LinearLayout
    android:id="@+id/onboarding_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_normal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="?android:attr/colorBackground"
    android:elevation="20dp">

    <Button
      android:id="@+id/onboarding_next_button"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_turn_on"
      android:backgroundTint="@color/otpview_color"/>

    <Button
      android:id="@+id/onboarding_no_thanks_button"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_not_now" />

  </LinearLayout>

</LinearLayout>
